[package]
name = "keyed_priority_queue"
version = "0.1.0"
authors = ["AngelicosPhosphoros <xuzin.timur@gmail.com>"]
edition = "2018"
description = "Priority queue that support changing priority or early remove by key"
license = "MIT"
readme = "README.md"
categories = ["data-structures"]
keywords = ["priority", "queue", "keyed", "binary", "heap"]
repository = "https://github.com/AngelicosPhosphoros/keyed_priority_queue"
documentation = "https://docs.rs/keyed_priority_queue"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
